--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<div class="jumbotron jumbotron-fluid">
+<div class="header">
     <div class="container text-center">
         <h1 class="display-4">Vacation Destinations WishList</h1>
         <p class="lead">Found exciting places to visit on your next vacation? Use the form below to add them to
